# sedgewick_cpp

./: .gitignore  CMakeLists.txt  README.md  todos.md
C/mastering_algorithms_with_c/: CMakeLists.txt
C/mastering_algorithms_with_c/ch_10_heaps_and_priority_queues/: CMakeLists.txt  ex-1.c  ex-1_2.c  heap.c  heap.h  list.c  parcel.h  parcels.c  parcels.h  pqueue.h  queue.c  queue.h
C/mastering_algorithms_with_c/ch_11_graphs/: CMakeLists.txt  bfs.c  bfs.h  dfs.c  dfs.h  graph.h  list.c  queue.c  queue.h  set.h
C/mastering_algorithms_with_c/ch_12_sorting_and_searching/: CMakeLists.txt  bisearch.c  ctsort.c  directls.c  directls.h  issort.c  mgsort.c  qksort.c  rxsort.c  search.h  sort.h  spell.c  spell.h
C/mastering_algorithms_with_c/ch_13_numerical_methods/: CMakeLists.txt  interpol.c  lsqe.c  nummeths.h  root.c
C/mastering_algorithms_with_c/ch_14_data_compression/: CMakeLists.txt  bit.c  bit.h  bitree.c  bitree.h  compress.h  heap.c  huffman.c  lz77.c  transfer.c  transfer.h
C/mastering_algorithms_with_c/ch_15_data_encryption/: CMakeLists.txt  bit.h  cbc.c  cbc.h  des.c  encrypt.h  rsa.c
C/mastering_algorithms_with_c/ch_16_graph_algorithms/: CMakeLists.txt  graph.c  graph.h  graphalg.h  mst.c  route.c  route.h  set.c  set.h  shortest.c  tsp.c
C/mastering_algorithms_with_c/ch_17_geometric_algorithms/: CMakeLists.txt  arclen.c  cvxhull.c  geodist.c  geodist.h  geometry.h  lint.c  list.h
C/mastering_algorithms_with_c/ch_5_linked_lists/: CMakeLists.txt  clist.c  clist.h  dlist.c  dlist.h  frames.c  frames.h  list.c  list.h  page.c  page.h
C/mastering_algorithms_with_c/ch_6_stacks_and_queues/: CMakeLists.txt  event.h  events.c  events.h  list.c  list.h  queue.c  queue.h  stack.c  stack.h
C/mastering_algorithms_with_c/ch_7_sets/: CMakeLists.txt  cover.c  cover.h  set.c  set.h
C/mastering_algorithms_with_c/ch_8_hash_tables/: CMakeLists.txt  chtbl.c  chtbl.h  ex-1.c  ex-1_2.c  hashpjw.c  hashpjw.h  lex.c  lex.h  list.c  list.h  ohtbl.c  ohtbl.h  symbol.h
C/mastering_algorithms_with_c/ch_9_trees/: CMakeLists.txt  bistree.c  bistree.h  bitree.c  ex-1.c  ex-1_2.c  traverse.c  traverse.h
Cpp/algorithms_in_c++_examples_modernized/: CMakeLists.txt
Cpp/algorithms_in_c++_examples_modernized/ch_1/: 1_1.cpp  1_2.cpp  1_3.cpp  1_4.cpp  CMakeLists.txt
Cpp/algorithms_in_c++_examples_modernized/ch_10/: 10_1.cpp  10_2.cpp  10_3.cpp  10_4.cpp  CMakeLists.txt
Cpp/algorithms_in_c++_examples_modernized/ch_11/: 11_1.cpp  11_2.cpp  11_3.cpp  11_4.cpp  CMakeLists.txt
Cpp/algorithms_in_c++_examples_modernized/ch_12/: 12_1.cpp  12_10.cpp  12_11.cpp  12_12.cpp  12_13.cpp  12_14.cpp  12_15.cpp  12_16.cpp  12_17.cpp  12_2.cpp  12_3.cpp  12_4.cpp  12_5.cpp  12_6.cpp  12_7.cpp  12_8.cpp  12_9.cpp  CMakeLists.txt
Cpp/algorithms_in_c++_examples_modernized/ch_13/: 13_1.cpp  13_10.cpp  13_2.cpp  13_3.cpp  13_4.cpp  13_5.cpp  13_6.cpp  13_7.cpp  13_8.cpp  13_9.cpp  CMakeLists.txt
Cpp/algorithms_in_c++_examples_modernized/ch_14/: 14_1.cpp  14_2.cpp  14_3.cpp  14_4.cpp  14_5.cpp  14_6.cpp  14_7.cpp  CMakeLists.txt
Cpp/algorithms_in_c++_examples_modernized/ch_15/: 15_1.cpp  15_10.cpp  15_11.cpp  15_12.cpp  15_2.cpp  15_3.cpp  15_4.cpp  15_5.cpp  15_6.cpp  15_7.cpp  15_8.cpp  15_9.cpp  CMakeLists.txt
Cpp/algorithms_in_c++_examples_modernized/ch_16/: 16_1.cpp  16_2.cpp  16_3.cpp  16_4.cpp  16_5.cpp  16_6.cpp  16_7.cpp  16_8.cpp  CMakeLists.txt
Cpp/algorithms_in_c++_examples_modernized/ch_17/: 17_1.cpp  17_10.cpp  17_11.cpp  17_12.cpp  17_13.cpp  17_14.cpp  17_15.cpp  17_16.cpp  17_17.cpp  17_18.cpp  17_19.cpp  17_2.cpp  17_3.cpp  17_4.cpp  17_5.cpp  17_6.cpp  17_7.cpp  17_8.cpp  17_9.cpp  CMakeLists.txt  Connected_component.h  Dense_graph.cpp  Dense_graph.h  Graph.cpp  Graph.h  IO.h  Sparse_multigraph.cpp  Sparse_multigraph.h
Cpp/algorithms_in_c++_examples_modernized/ch_18/: 18_1.cpp  18_10.cpp  18_11.cpp  18_2.cpp  18_3.cpp  18_4.cpp  18_5.cpp  18_6.cpp  18_7.cpp  18_8.cpp  18_9.cpp  CMakeLists.txt
Cpp/algorithms_in_c++_examples_modernized/ch_19/: 19_1.cpp  19_10.cpp  19_11.cpp  19_12.cpp  19_13.cpp  19_2.cpp  19_3.cpp  19_4.cpp  19_5.cpp  19_6.cpp  19_7.cpp  19_8.cpp  19_9.cpp  CMakeLists.txt
Cpp/algorithms_in_c++_examples_modernized/ch_2/: 2_1.cpp  2_2.cpp  CMakeLists.txt
Cpp/algorithms_in_c++_examples_modernized/ch_20/: 20_1.cpp  20_10.cpp  20_2.cpp  20_3.cpp  20_4.cpp  20_5.cpp  20_6.cpp  20_7.cpp  20_8.cpp  20_9.cpp  CMakeLists.txt
Cpp/algorithms_in_c++_examples_modernized/ch_21/: 21_1.cpp  21_2.cpp  21_3.cpp  21_4.cpp  21_5.cpp  21_6.cpp  21_7.cpp  21_8.cpp  21_9.cpp  CMakeLists.txt
Cpp/algorithms_in_c++_examples_modernized/ch_22/: 22_1.cpp  22_10.cpp  22_11.cpp  22_12.cpp  22_13.cpp  22_14.cpp  22_15.cpp  22_2.cpp  22_3.cpp  22_4.cpp  22_5.cpp  22_6.cpp  22_7.cpp  22_8.cpp  22_9.cpp  CMakeLists.txt
Cpp/algorithms_in_c++_examples_modernized/ch_3/: 3_1.cpp  3_10.cpp  3_11.cpp  3_12.cpp  3_13.cpp  3_14.cpp  3_15.cpp  3_16.cpp  3_17.cpp  3_18.cpp  3_19.cpp  3_2.cpp  3_20.cpp  3_3.cpp  3_4.cpp  3_5.cpp  3_6.cpp  3_7.cpp  3_8.cpp  3_9.cpp  CMakeLists.txt  Point.h  list.cpp  list.h
Cpp/algorithms_in_c++_examples_modernized/ch_4/: 4_1.cpp  4_10.cpp  4_11.cpp  4_12.cpp  4_13.cpp  4_14.cpp  4_15.cpp  4_16.cpp  4_17.cpp  4_18.cpp  4_19.cpp  4_2.cpp  4_20.cpp  4_21.cpp  4_22.cpp  4_23.cpp  4_24.cpp  4_25.cpp  4_3.cpp  4_4.cpp  4_5.cpp  4_6.cpp  4_7.cpp  4_8.cpp  4_9.cpp  CMakeLists.txt  Complex.cpp  Complex.h  Point.h  Poly.h  Queue.h  Stack.h  Union_find.cpp  Union_find.h
Cpp/algorithms_in_c++_examples_modernized/ch_5/: 5_1.cpp  5_10.cpp  5_11.cpp  5_12.cpp  5_13.cpp  5_14.cpp  5_15.cpp  5_16.cpp  5_17.cpp  5_18.cpp  5_19.cpp  5_2.cpp  5_20.cpp  5_21.cpp  5_22.cpp  5_3.cpp  5_4.cpp  5_5.cpp  5_6.cpp  5_7.cpp  5_8.cpp  5_9.cpp  CMakeLists.txt
Cpp/algorithms_in_c++_examples_modernized/ch_6/: 6_1.cpp  6_10.cpp  6_11.cpp  6_12.cpp  6_13.cpp  6_14.cpp  6_15.cpp  6_16.cpp  6_2.cpp  (+9 more)
Cpp/algorithms_in_c++_pt1/: CMakeLists.txt
test/: CMakeLists.txt  accumulator_spec.cpp  bag_spec.cpp  bubblesort_spec.cpp  selection_sort_spec.cpp  sort_spec.cpp
test/input_files/: in_test1.txt
(+1883 files in other folders)
