cmake_minimum_required(VERSION 3.6)
project(mastering_algorithms_with_c)

add_subdirectory(ch_5_linked_lists)
add_subdirectory(ch_6_stacks_and_queues)
add_subdirectory(ch_7_sets)
add_subdirectory(ch_8_hash_tables)
add_subdirectory(ch_9_trees)
add_subdirectory(ch_10_heaps_and_priority_queues)
add_subdirectory(ch_11_graphs)
add_subdirectory(ch_12_sorting_and_searching)
add_subdirectory(ch_13_numerical_methods)
add_subdirectory(ch_14_data_compression)
add_subdirectory(ch_15_data_encryption)
add_subdirectory(ch_16_graph_algorithms)
add_subdirectory(ch_17_geometric_algorithms)