cmake_minimum_required(VERSION 3.6)
project(tmp)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(ch_1)
add_subdirectory(ch_2)
add_subdirectory(ch_3)
add_subdirectory(ch_4)
add_subdirectory(ch_5)
add_subdirectory(ch_6)
add_subdirectory(ch_7)
add_subdirectory(ch_8)
add_subdirectory(ch_9)
add_subdirectory(ch_10)
add_subdirectory(ch_11)
add_subdirectory(ch_12)
add_subdirectory(ch_13)
add_subdirectory(ch_14)
add_subdirectory(ch_15)
add_subdirectory(ch_16)
add_subdirectory(ch_17)
add_subdirectory(ch_18)
add_subdirectory(ch_19)
add_subdirectory(ch_20)
add_subdirectory(ch_21)
add_subdirectory(ch_22)
