cmake_minimum_required(VERSION 3.6)
project(algorithms_in_c++)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(ch_3_1_building_blocks)
add_subdirectory(ch_3_2_arrays)
add_subdirectory(ch_3_3_linked_lists)
add_subdirectory(ch_3_4_elementary_list_processing)
add_subdirectory(ch_3_5_memory_allocation_for_lists)
add_subdirectory(ch_3_6_strings)
add_subdirectory(ch_3_7_compound_data_structures)
add_subdirectory(ch_4_0_abstract_data_types)
add_subdirectory(ch_4_1_abstract_objects_and_collections)
add_subdirectory(ch_4_2_pushdown_stack_adt)
add_subdirectory(ch_4_3_stack_adt_clients)
add_subdirectory(ch_4_4_stack_adt_implementations)
add_subdirectory(ch_4_5_new_adts)
add_subdirectory(ch_4_6_fifo_queues)
add_subdirectory(ch_4_7_duplicate_and_index_items)
add_subdirectory(ch_4_8_first_class_adts)
add_subdirectory(ch_4_9_application_based_adts)
add_subdirectory(ch_5_1_recursive_algorithms)
add_subdirectory(ch_5_2_divide_and_conquer)
add_subdirectory(ch_5_3_dynamic_programming)
add_subdirectory(ch_5_4_trees)
add_subdirectory(ch_5_5_mathematical_properties_of_trees)
add_subdirectory(ch_5_6_tree_traversal)
add_subdirectory(ch_5_7_recursive_binary_tree_algorithms)
add_subdirectory(ch_5_8_graph_traversal)
add_subdirectory(ch_6_1_elementary_sorting)
add_subdirectory(ch_6_2_selection_sort)
add_subdirectory(ch_6_3_insertion_sort)
add_subdirectory(ch_6_4_bubble_sort)
add_subdirectory(ch_6_5_performance_of_elementary_sorts)
add_subdirectory(ch_6_6_shellsort)
add_subdirectory(ch_6_7_sorting_other_types)
add_subdirectory(ch_7_1_quicksort_basic_algorithm)
add_subdirectory(ch_7_2_quicksort_performance)
add_subdirectory(ch_7_3_stack_size)
add_subdirectory(ch_7_4_small_subfiles)
add_subdirectory(ch_7_5_median_of_three_partitioning)
add_subdirectory(ch_7_6_duplicate_keys)
add_subdirectory(ch_7_7_strings_and_vectors)
add_subdirectory(ch_7_8_selection)
add_subdirectory(ch_8_1_two_way_merging)
add_subdirectory(ch_8_2_abstract_in_place_merge)
add_subdirectory(ch_8_3_top_down_mergesort)
add_subdirectory(ch_8_4_improvements_to_the_basic_algorithm)
add_subdirectory(ch_8_5_bottom_up_mergesort)
add_subdirectory(ch_8_6_performance_characteristics_of_mergesort)
add_subdirectory(ch_8_7_linked_list_implement)
add_subdirectory(ch_8_8_recursion_revisited)
add_subdirectory(ch_9_priority_queues_and_heapsort)

add_subdirectory(ch_9_1_elementaray_implementations)
add_subdirectory(ch_9_2_heap_data_structure)
add_subdirectory(ch_9_3_algorithms_on_heaps)
add_subdirectory(ch_9_4_heapsort)
add_subdirectory(ch_9_5_priority_queue_adt)
add_subdirectory(ch_9_6_priority_queues_for_index_items)
add_subdirectory(ch_9_7_binomial_queues)
add_subdirectory(ch_9_priority_queues_and_heapsort)
add_subdirectory(ch_10_1_bits_bytes_and_words)
add_subdirectory(ch_10_2_binary_quicksort)
add_subdirectory(ch_10_3_msd_radix_srt)
add_subdirectory(ch_10_4_three_way_radix_quicksort)
add_subdirectory(ch_10_5_lsd_radix_srot)
add_subdirectory(ch_10_6_performance_characteristics_of_radix_sorts)
add_subdirectory(ch_10_7_sublinear_time_sorts)
add_subdirectory(ch_11_1_batchers_odd_even_mergesort)
add_subdirectory(ch_11_2_sorting_networks)
add_subdirectory(ch_11_3_external_sorting)
add_subdirectory(ch_11_4_sort_merge_implementations)
add_subdirectory(ch_11_5_parallel_sort_merge)
add_subdirectory(ch_12_1_symbol_table_abstract_data_type)
add_subdirectory(ch_12_2_key_indexed_search)
add_subdirectory(ch_12_3_sequential_search)
add_subdirectory(ch_12_4_binary_search)
add_subdirectory(ch_12_5_binary_search_trees)
add_subdirectory(ch_12_6_performance_characteristics_of_bsts)
add_subdirectory(ch_12_7_index_implementations_with_symbol_tables)
add_subdirectory(ch_12_8_inseertion_at_the_root_in_bsts)
add_subdirectory(ch_12_9_bst_implementations_of_other_adt_functions)
add_subdirectory(ch_13_1_randomized_bsts)
add_subdirectory(ch_13_2_splay_bsts)
add_subdirectory(ch_13_3_top_down_2_3_4_trees)
add_subdirectory(ch_13_4_red_black_trees)
add_subdirectory(ch_13_5_skip_lists)
add_subdirectory(ch_13_6_performance_characteristics)
add_subdirectory(ch_14_1_hash_functions)
add_subdirectory(ch_14_2_separate_chaining)
add_subdirectory(ch_14_3_linear_probing)
add_subdirectory(ch_14_4_double_hashing)
add_subdirectory(ch_14_5_dynamic_hash_tables)
add_subdirectory(ch_14_6_perspective)
add_subdirectory(ch_15_1_digital_search_trees)
add_subdirectory(ch_15_2_tries)
add_subdirectory(ch_15_3_patricia_tries)
add_subdirectory(ch_15_4_multiway_tries_and_tsts)
add_subdirectory(ch_15_5_text_string_index_applications)
add_subdirectory(ch_16_1_rules_of_the_game)
add_subdirectory(ch_16_2_indexed_sequential_access)
add_subdirectory(ch_16_3_b_trees)
add_subdirectory(ch_16_4_extendible_hashing)
add_subdirectory(ch_16_5_perspective)