project(ch_12)

add_executable(12_1 12_1.cpp)
add_executable(12_2 12_2.cpp)
add_executable(12_3 12_3.cpp)
add_executable(12_4 12_4.cpp)
add_executable(12_5 12_5.cpp)
add_executable(12_6 12_6.cpp)
add_executable(12_7 12_7.cpp)
add_executable(12_8 12_8.cpp)
add_executable(12_9 12_9.cpp)
add_executable(12_10 12_10.cpp)
add_executable(12_11 12_11.cpp)
add_executable(12_12 12_12.cpp)
add_executable(12_13 12_13.cpp)
add_executable(12_14 12_14.cpp)
add_executable(12_15 12_15.cpp)
add_executable(12_16 12_16.cpp)
add_executable(12_17 12_17.cpp)
