project(ch_15)

add_executable(15_1 15_1.cpp)
add_executable(15_2 15_2.cpp)
add_executable(15_3 15_3.cpp)
add_executable(15_4 15_4.cpp)
add_executable(15_5 15_5.cpp)
add_executable(15_6 15_6.cpp)
add_executable(15_7 15_7.cpp)
add_executable(15_8 15_8.cpp)
add_executable(15_9 15_9.cpp)
add_executable(15_10 15_10.cpp)
add_executable(15_11 15_11.cpp)
add_executable(15_12 15_12.cpp)
