project(ch_17)

add_executable(17_1 17_1.cpp)
add_executable(17_2 17_2.cpp)
add_executable(17_3 17_3.cpp)
add_executable(17_4 17_4.cpp)
add_executable(17_5 17_5.cpp)
add_executable(17_6 17_6.cpp)
add_executable(17_7 17_7.cpp)
add_executable(17_8 17_8.cpp)
add_executable(17_9 17_9.cpp)
add_executable(17_10 17_10.cpp)
add_executable(17_11 17_11.cpp)
add_executable(17_12 17_12.cpp)
add_executable(17_13 17_13.cpp)
add_executable(17_14 17_14.cpp)
add_executable(17_15 17_15.cpp)
add_executable(17_16 17_16.cpp)
add_executable(17_17 17_17.cpp)
add_executable(17_18 17_18.cpp)
add_executable(17_19 17_19.cpp)
