project(ch_19)

add_executable(19_1 19_1.cpp)
add_executable(19_2 19_2.cpp)
add_executable(19_3 19_3.cpp)
add_executable(19_4 19_4.cpp)
add_executable(19_5 19_5.cpp)
add_executable(19_6 19_6.cpp)
add_executable(19_7 19_7.cpp)
add_executable(19_8 19_8.cpp)
add_executable(19_9 19_9.cpp)
add_executable(19_10 19_10.cpp)
add_executable(19_11 19_11.cpp)
add_executable(19_12 19_12.cpp)
add_executable(19_13 19_13.cpp)
