project(ch_22)

add_executable(22_1 22_1.cpp)
add_executable(22_2 22_2.cpp)
add_executable(22_3 22_3.cpp)
add_executable(22_4 22_4.cpp)
add_executable(22_5 22_5.cpp)
add_executable(22_6 22_6.cpp)
add_executable(22_7 22_7.cpp)
add_executable(22_8 22_8.cpp)
add_executable(22_9 22_9.cpp)
add_executable(22_10 22_10.cpp)
add_executable(22_11 22_11.cpp)
add_executable(22_12 22_12.cpp)
add_executable(22_13 22_13.cpp)
add_executable(22_14 22_14.cpp)
add_executable(22_15 22_15.cpp)
