project(ch_3)

add_executable(3_1 3_1.cpp)
add_executable(3_2 3_2.cpp)
add_executable(3_3 3_3.cpp)
add_executable(3_4 3_4.cpp Point.h)
add_executable(3_5 3_5.cpp)
add_executable(3_6 3_6.cpp)
add_executable(3_7 3_7.cpp)
add_executable(3_8 3_8.cpp)
add_executable(3_9 3_9.cpp)
add_executable(3_10 3_10.cpp)
add_executable(3_11 3_11.cpp)
add_executable(3_12 3_12.cpp)
add_executable(3_13 3_13.cpp list.h)
add_executable(3_14 3_14.cpp)
add_executable(3_15 3_15.cpp)
add_executable(3_16 3_16.cpp)
add_executable(3_17 3_17.cpp)
add_executable(3_18 3_18.cpp)
add_executable(3_19 3_19.cpp)
add_executable(3_20 3_20.cpp)
