project(ch_4)

add_executable(4_1 4_1.cpp)
add_executable(4_2 4_2.cpp)
add_executable(4_3 4_3.cpp)
add_executable(4_4 4_4.cpp)
add_executable(4_5 4_5.cpp)
add_executable(4_6 4_6.cpp)
add_executable(4_7 4_7.cpp)
add_executable(4_8 4_8.cpp)
add_executable(4_9 4_9.cpp)
add_executable(4_10 4_10.cpp)
add_executable(4_11 4_11.cpp)
add_executable(4_12 4_12.cpp)
add_executable(4_13 4_13.cpp)
add_executable(4_14 4_14.cpp)
add_executable(4_15 4_15.cpp)
add_executable(4_16 4_16.cpp)
add_executable(4_17 4_17.cpp)
add_executable(4_18 4_18.cpp)
add_executable(4_19 4_19.cpp)
add_executable(4_20 4_20.cpp)
add_executable(4_21 4_21.cpp)
add_executable(4_22 4_22.cpp)
add_executable(4_23 4_23.cpp)
add_executable(4_24 4_24.cpp)
add_executable(4_25 4_25.cpp)
