project(ch_5)

add_executable(5_1 5_1.cpp)
add_executable(5_2 5_2.cpp)
add_executable(5_3 5_3.cpp)
add_executable(5_4 5_4.cpp)
add_executable(5_5 5_5.cpp)
add_executable(5_6 5_6.cpp)
add_executable(5_7 5_7.cpp)
add_executable(5_8 5_8.cpp)
add_executable(5_9 5_9.cpp)
add_executable(5_10 5_10.cpp)
add_executable(5_11 5_11.cpp)
add_executable(5_12 5_12.cpp)
add_executable(5_13 5_13.cpp)
add_executable(5_14 5_14.cpp)
add_executable(5_15 5_15.cpp)
add_executable(5_16 5_16.cpp)
add_executable(5_17 5_17.cpp)
add_executable(5_18 5_18.cpp)
add_executable(5_19 5_19.cpp)
add_executable(5_20 5_20.cpp)
add_executable(5_21 5_21.cpp)
add_executable(5_22 5_22.cpp)
