project(ch_6)

add_executable(6_1 6_1.cpp)
add_executable(6_2 6_2.cpp)
add_executable(6_3 6_3.cpp)
add_executable(6_4 6_4.cpp)
add_executable(6_5 6_5.cpp)
add_executable(6_6 6_6.cpp)
add_executable(6_7 6_7.cpp)
add_executable(6_8 6_8.cpp)
add_executable(6_9 6_9.cpp)
add_executable(6_10 6_10.cpp)
add_executable(6_11 6_11.cpp)
add_executable(6_12 6_12.cpp)
add_executable(6_13 6_13.cpp)
add_executable(6_14 6_14.cpp)
add_executable(6_15 6_15.cpp)
add_executable(6_16 6_16.cpp)
add_executable(6_17 6_17.cpp)
